# chess_model

./: CMakeLists.txt  README.md  conanfile.txt
include/chess/: chess.hpp
include/chess/field/: field.hpp
include/chess/field/sector/: sector.hpp
include/chess/field/sector/figure/: figure.hpp
src/: main.cpp
src/chess/: chess.cpp  field.cpp  figure.cpp  sector.cpp
tests/: main.cpp
